--- a/.github/settings.yml
+++ b/.github/settings.yml
@@ -3,7 +3,7 @@ repository:
   description: "Backup your Docker volumes to Amazon S3 on a pre-defined cron schedule."
   homepage: "https://www.aaronfagan.ca/"
   default_branch: master
-  private: true
+  private: false
   has_issues: true
   has_wiki: false
   has_downloads: false
