--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,8 +7,7 @@ services:
       context: ./
       dockerfile: Dockerfile
     volumes:
-      - ${DIR_MOUNT}:/root/scripts
-      - /data:/data
+      - ${DIR_MOUNT}:/data
     restart: unless-stopped
 networks:
   default:
