--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -29,5 +29,7 @@ jobs:
       - name: Docker - Image - Push
         run: |
           docker buildx build --push \
+            --cache-from "type=local,src=/tmp/.buildx-cache" \
+            --cache-to "type=local,dest=/tmp/.buildx-cache" \
             --tag ${{ secrets.DOCKER_USERNAME }}/${{ env.DOCKER_IMAGE }}:latest \
             --platform linux/386,linux/amd64,linux/arm/v6,linux/arm/v7,linux/arm64,linux/ppc64le,linux/s390x .
