--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -17,7 +17,7 @@ jobs:
 # Install Buildx
       - name: Docker - Buildx - Install
         id: buildx
-        uses: crazy-max/ghaction-docker-buildx@master
+        uses: docker/setup-buildx-action@v1
         with:
           version: latest
 
