--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -16,28 +16,21 @@ jobs:
 
 # Buildx - Install
       - name: Docker - Buildx - Install
-        id: buildx
         uses: docker/setup-buildx-action@v1
-        with:
-          version: latest
-
-# # Buildx - Cache
-#       - name: Docker - Buildx - Cache
-#         uses: actions/cache@master
-#         id: cache
-#         with:
-#           path: /tmp/.buildx-cache
-#           key: ${{ runner.os }}-buildx-${{ github.sha }}
-#           restore-keys: |
-#             ${{ runner.os }}-buildx-
 
 # Docker Hub Login
       - name: Docker - Hub - Login
-        run: echo "${{ secrets.DOCKER_TOKEN }}" | docker login -u "${{ secrets.DOCKER_USERNAME }}" --password-stdin
+        uses: docker/login-action@v1
+        with:
+          username: ${{ secrets.DOCKER_USERNAME }}
+          password: ${{ secrets.DOCKER_TOKEN }}
 
 # Docker Image - Tag, Build, & Push
       - name: Docker - Image - Push
-        run: |
-          docker buildx build --push \
-            --tag ${{ secrets.DOCKER_USERNAME }}/${{ env.DOCKER_IMAGE }}:latest \
-            --platform linux/386,linux/amd64,linux/arm/v6,linux/arm/v7,linux/arm64,linux/ppc64le,linux/s390x .
+        uses: docker/build-push-action@v2
+        with:
+          context: .
+          file: ./Dockerfile
+          platforms: linux/amd64,linux/arm/v7,linux/arm64
+          push: true
+          tags: ${{ secrets.DOCKER_USERNAME }}/${{ env.DOCKER_IMAGE }}:latest
