--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -14,16 +14,16 @@ jobs:
       - name: 'Checkout - Repository'
         uses: actions/checkout@master
 
-# Buildx - Install
-      - name: Docker - Buildx - Install
-        uses: docker/setup-buildx-action@v1
-
 # Docker Hub Login
       - name: Docker - Hub - Login
         uses: docker/login-action@v1
         with:
           username: ${{ secrets.DOCKER_USERNAME }}
           password: ${{ secrets.DOCKER_TOKEN }}
+
+# # Buildx - Install
+#       - name: Docker - Buildx - Install
+#         uses: docker/setup-buildx-action@v1
 
 # Docker Image - Tag, Build, & Push
       - name: Docker - Image - Push
