--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -34,14 +34,22 @@ jobs:
       - name: Docker - Buildx - Install
         uses: docker/setup-buildx-action@master
 
+
 # Docker Image - Tag, Build, & Push
       - name: Docker - Image - Push
-        uses: docker/build-push-action@v2
-        with:
-          context: .
-          file: ./Dockerfile
-          platforms: linux/amd64,linux/arm/v7,linux/arm64
-          push: true
-          tags: ${{ secrets.DOCKER_USERNAME }}/${{ env.DOCKER_IMAGE }}:latest
-          # cache-from: type=local,src=/tmp/.buildx-cache
-          # cache-to: type=local,dest=/tmp/.buildx-cache
+        run: |
+          docker buildx build --push \
+            --tag ${{ secrets.DOCKER_USERNAME }}/${{ env.DOCKER_IMAGE }}:latest \
+            --platform linux/amd64,linux/arm/v7,linux/arm64 .
+
+# # Docker Image - Tag, Build, & Push
+#       - name: Docker - Image - Push
+#         uses: docker/build-push-action@v2
+#         with:
+#           context: .
+#           file: ./Dockerfile
+#           platforms: linux/amd64,linux/arm/v7,linux/arm64
+#           push: true
+#           tags: ${{ secrets.DOCKER_USERNAME }}/${{ env.DOCKER_IMAGE }}:latest
+#           # cache-from: type=local,src=/tmp/.buildx-cache
+#           # cache-to: type=local,dest=/tmp/.buildx-cache
