--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -14,14 +14,14 @@ jobs:
       - name: Checkout - Repository
         uses: actions/checkout@master
 
-# # Cache
-#       - name: Docker - Buildx - Cache
-#         uses: actions/cache@v2
-#         with:
-#           path: /tmp/.buildx-cache
-#           key: ${{ runner.os }}-buildx-${{ github.sha }}
-#           restore-keys: |
-#             ${{ runner.os }}-buildx-
+# Cache
+      - name: Docker - Buildx - Cache
+        uses: actions/cache@v2
+        with:
+          path: /tmp/.buildx-cache
+          key: ${{ runner.os }}-buildx-${{ github.sha }}
+          restore-keys: |
+            ${{ runner.os }}-buildx-
 
 # Docker Hub Login
       - name: Docker - Hub - Login
@@ -39,6 +39,8 @@ jobs:
       - name: Docker - Image - Push
         run: |
           docker buildx build --push \
+            --cache-from: type=local,src=/tmp/.buildx-cache \
+            --cache-to: type=local,dest=/tmp/.buildx-cache \
             --tag ${{ secrets.DOCKER_USERNAME }}/${{ env.DOCKER_IMAGE }}:latest \
             --platform linux/amd64,linux/arm/v7,linux/arm64 .
 
