--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -30,31 +30,31 @@ jobs:
           username: ${{ secrets.DOCKER_USERNAME }}
           password: ${{ secrets.DOCKER_TOKEN }}
 
-# Buildx - Install
+# Install Buildx
       - name: Docker - Buildx - Install
         id: buildx
-        uses: docker/setup-buildx-action@v2
+        uses: crazy-max/ghaction-docker-buildx@v1
         with:
           version: latest
 
 
-# Docker Image - Tag, Build, & Push
-      - name: Docker - Image - Push
-        run: |
-          docker buildx build --push \
-            --cache-from type=local,src=/tmp/.buildx-cache \
-            --cache-to type=local,dest=/tmp/.buildx-cache \
-            --tag ${{ secrets.DOCKER_USERNAME }}/${{ env.DOCKER_IMAGE }}:latest \
-            --platform linux/386,linux/amd64,linux/arm/v6,linux/arm/v7,linux/arm64,linux/ppc64le,linux/s390x .
-
 # # Docker Image - Tag, Build, & Push
 #       - name: Docker - Image - Push
-#         uses: docker/build-push-action@v2
-#         with:
-#           context: .
-#           file: ./Dockerfile
-#           platforms: linux/amd64,linux/arm/v7,linux/arm64
-#           push: true
-#           tags: ${{ secrets.DOCKER_USERNAME }}/${{ env.DOCKER_IMAGE }}:latest
-#           # cache-from: type=local,src=/tmp/.buildx-cache
-#           # cache-to: type=local,dest=/tmp/.buildx-cache
+#         run: |
+#           docker buildx build --push \
+#             --cache-from type=local,src=/tmp/.buildx-cache \
+#             --cache-to type=local,dest=/tmp/.buildx-cache \
+#             --tag ${{ secrets.DOCKER_USERNAME }}/${{ env.DOCKER_IMAGE }}:latest \
+#             --platform linux/386,linux/amd64,linux/arm/v6,linux/arm/v7,linux/arm64,linux/ppc64le,linux/s390x .
+
+# Docker Image - Tag, Build, & Push
+      - name: Docker - Image - Push
+        uses: docker/build-push-action@v2
+        with:
+          context: .
+          file: ./Dockerfile
+          platforms: linux/386,linux/amd64,linux/arm/v6,linux/arm/v7,linux/arm64,linux/ppc64le,linux/s390x
+          push: true
+          tags: ${{ secrets.DOCKER_USERNAME }}/${{ env.DOCKER_IMAGE }}:latest
+          cache-from: type=local,src=/tmp/.buildx-cache
+          cache-to: type=local,dest=/tmp/.buildx-cache
