--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -30,10 +30,16 @@ jobs:
           username: ${{ secrets.DOCKER_USERNAME }}
           password: ${{ secrets.DOCKER_TOKEN }}
 
-# Install Buildx
+# Install QEMU
+      - name: Docker - QEMU - Install
+        uses: docker/setup-qemu-action@v1
+        with:
+          platforms: all
+
+# Buildx - Install
       - name: Docker - Buildx - Install
         id: buildx
-        uses: crazy-max/ghaction-docker-buildx@v1
+        uses: docker/setup-buildx-action@v1
         with:
           version: latest
 
@@ -53,7 +59,7 @@ jobs:
         with:
           context: .
           file: ./Dockerfile
-          platforms: linux/386,linux/amd64,linux/arm/v6,linux/arm/v7,linux/arm64,linux/ppc64le,linux/s390x
+          platforms: inux/amd64,linux/arm/v7,linux/arm64
           push: true
           tags: ${{ secrets.DOCKER_USERNAME }}/${{ env.DOCKER_IMAGE }}:latest
           cache-from: type=local,src=/tmp/.buildx-cache
