--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -14,14 +14,14 @@ jobs:
       - name: Checkout - Repository
         uses: actions/checkout@master
 
-# Cache
-      - name: Docker - Buildx - Cache
-        uses: actions/cache@v2
-        with:
-          path: /tmp/.buildx-cache
-          key: ${{ runner.os }}-buildx-${{ github.sha }}
-          restore-keys: |
-            ${{ runner.os }}-buildx-
+# # Cache
+#       - name: Docker - Buildx - Cache
+#         uses: actions/cache@v2
+#         with:
+#           path: /tmp/.buildx-cache
+#           key: ${{ runner.os }}-buildx-${{ github.sha }}
+#           restore-keys: |
+#             ${{ runner.os }}-buildx-
 
 # Docker Hub Login
       - name: Docker - Hub - Login
@@ -43,7 +43,6 @@ jobs:
         with:
           version: latest
 
-
 # # Docker Image - Tag, Build, & Push
 #       - name: Docker - Image - Push
 #         run: |
@@ -58,9 +57,8 @@ jobs:
         uses: docker/build-push-action@v2
         with:
           context: .
-          file: ./Dockerfile
-          platforms: inux/amd64,linux/arm/v7,linux/arm64
+          platforms: linux/amd64,linux/arm64,linux/riscv64,linux/ppc64le,linux/s390x,linux/386,linux/arm/v7,linux/arm/v6
           push: true
           tags: ${{ secrets.DOCKER_USERNAME }}/${{ env.DOCKER_IMAGE }}:latest
-          cache-from: type=local,src=/tmp/.buildx-cache
-          cache-to: type=local,dest=/tmp/.buildx-cache
+          # cache-from: type=local,src=/tmp/.buildx-cache
+          # cache-to: type=local,dest=/tmp/.buildx-cache
