--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -14,6 +14,26 @@ jobs:
       - name: Checkout - Repository
         uses: actions/checkout@master
 
+# Docker Hub Login
+      - name: Docker - Hub - Login
+        uses: docker/login-action@v1
+        with:
+          username: ${{ secrets.DOCKER_USERNAME }}
+          password: ${{ secrets.DOCKER_TOKEN }}
+
+# Install QEMU
+      - name: Docker - QEMU - Install
+        uses: docker/setup-qemu-action@v1
+        with:
+          platforms: all
+
+# Buildx - Install
+      - name: Docker - Buildx - Install
+        id: buildx
+        uses: docker/setup-buildx-action@v1
+        with:
+          version: latest
+
 # Cache
       - name: Docker - Buildx - Cache
         uses: actions/cache@v2
@@ -22,20 +42,6 @@ jobs:
           key: ${{ runner.os }}-buildx-${{ github.sha }}
           restore-keys: |
             ${{ runner.os }}-buildx-
-
-# Docker Hub Login
-      - name: Docker - Hub - Login
-        uses: docker/login-action@v1
-        with:
-          username: ${{ secrets.DOCKER_USERNAME }}
-          password: ${{ secrets.DOCKER_TOKEN }}
-
-# Buildx - Install
-      - name: Docker - Buildx - Install
-        id: buildx
-        uses: docker/setup-buildx-action@v1
-        with:
-          version: latest
 
 # Docker Image - Tag, Build, & Push
       - name: Docker - Image - Push
