--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -21,13 +21,13 @@ jobs:
           username: ${{ secrets.DOCKER_USERNAME }}
           password: ${{ secrets.DOCKER_TOKEN }}
 
-# Install QEMU
+# Install - QEMU
       - name: Docker - QEMU - Install
         uses: docker/setup-qemu-action@v1
         with:
           platforms: all
 
-# Buildx - Install
+#  Install - Buildx
       - name: Docker - Buildx - Install
         id: buildx
         uses: docker/setup-buildx-action@v1
